auto-test/tests/chapter_15/invalid_types/subscript_both_pointers.c
int main(void)
{
    int x = 10;
    int *ptr = &x;
    int *subscript = 0;
    
    return ptr[subscript];
}